﻿shmuel 14.08.2019 10:43:37 +0200 - build 697

1. LuaFAR: добавлены функции panel.BeginSelection и panel.EndSelection.

shmuel 03.08.2019 17:55:11 +0200 - build 696

1. Добавлена поддержка контент-колонок в макрофайлах. Для этого нужно определить функцию ContentColumns().

shmuel 28.07.2019 02:03:08 +0200 - build 695

1. LuaFAR: suppress a warning.

shmuel 25.07.2019 21:47:31 +0200 - build 694

1. Added function mf.printconsole().

shmuel 24.07.2019 20:52:16 +0200 - build 693

1. M#3548: LuaFAR: функция юникодного вывода в консоль
   --> added function win.WriteConsole().

shmuel 22.06.2019 21:04:56 +0200 - build 692

1. M#3670: mf.AddExitHandler: возвращаемое значение и дополнительные параметры

shmuel 21.06.2019 22:02:33 +0200 - build 691

1. LuaFAR: minor refactoring.

shmuel 18.04.2019 10:00:19 +0200 - build 690

1. Уточнение обработки OPEN_FINDLIST.

shmuel 14.02.2019 22:34:39 +0200 - build 689

1. Меры по увеличению безопасности функции mf.mload.

shmuel 14.02.2019 15:21:37 +0200 - build 688

1. В функции mf.mload была возможна ситуация неосвобождения объекта доступа к базе данных.

shmuel 18.01.2019 19:31:11 +0200 - build 687

1. LuaFAR: мелкая подчистка (не баг-фикс).

shmuel 12.01.2019 20:56:37 +0200 - build 686

1. Уточнение 685.

shmuel 12.01.2019 19:16:29 +0200 - build 685

1. LuaFAR: добавлена экспортируемая функция luaopen_luafar3.
   - Это делает возможным использование luafar3.dll как обычной библиотеки для скриптов Lua 5.1,
     вне Far Manager (таблицы win, bit64, unicode; "юникодизация" функций работы со строками).
   - Естественно, при этом нельзя будет использовать таблицы, относящиеся к Far API.
   - Загрузка библиотеки: require "luafar3"

shmuel 25.12.2018 16:23:52 +0200 - build 684

1. farapi.lua: добавлены прототипы функций FSF.FarClock и FSF.CompareStrings.

shmuel 22.12.2018 21:07:42 +0200 - build 683

1. LuaFAR: во всех функциях, принимающих цвет, если цвет передан числом, то байт прозрачности
   принудительно устанавливается в 0xFF.
