@@ -1,4 +1,8 @@
-﻿shmuel 14.08.2019 10:43:37 +0200 - build 697
+﻿shmuel 14.08.2019 20:21:13 +0200 - build 698
+
+1. LuaFAR: добавить константы TBPF_xxx в far.Flags.
+
+shmuel 14.08.2019 10:43:37 +0200 - build 697
 
 1. LuaFAR: добавлены функции panel.BeginSelection и panel.EndSelection.
 
